Configure jacoco and surefire plugins for Jenkins CI
Co-authored-by: shubham <shubham@web3fusion.net>